maint:Main image and cover text styling amended, about us and footer no longer covered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
 * {
     margin: 0;
     padding: 0;
-    border: none;
     box-sizing: border-box;
 }
 
@@ -25,7 +24,8 @@ h1, h2, h3 {
     color: black;
     float: left;
     font-size: 220%;
-    flex:auto
+    flex:auto;
+    padding-left: 5px;
 }
 
 /* nav links */
@@ -41,7 +41,7 @@ menu, #logo {
 
 #menu li {
     list-style-type: none;
-    margin-top: 20px;
+    margin-top: 5px;
     margin-right: 35px;
     float: right;
 }
@@ -71,13 +71,13 @@ menu, #logo {
     height: 500px;
     width: 100%;
     background: url("../images/Volleyball-cover.jpg") center center/cover no-repeat;
-    position:absolute;
+    position:relative;
 }
 
 #club-info-box {
     background-color: rgba(213, 126, 234, .8);
-    position:relative;
-    top: 20px;
+    position:absolute;
+    bottom: 20px;
     width:40%;
     padding-left: 10px;
     padding-top: 5px;
